Two factor Authentication

--- a/User.Management.ApI/appsettings.json
+++ b/User.Management.ApI/appsettings.json
@@ -14,7 +14,7 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
     "Username": "anna.nimuna@gmail.com",
-    "Password": "" //Account>App password
+    "Password": "" // Add from Email>Account> generate App password
   },
   "JWT": {
     "ValidAudience": "http://localhost:4200",
